--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,10 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/adhil0/alohaal
 BugReports: https://github.com/adhil0/alohaal/issues
+RoxygenNote: 7.1.1
+Imports: crayon, emo, beepr
+Remotes: hadley/emo
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
