--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,6 @@ Remotes: hadley/emo
 Suggests: testthat,
     knitr,
     rmarkdown
-VignetteBuilder: knitr
+VignetteBuilder: knitr, tidyverse
 Depends: 
     R (>= 2.10)
