--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Suggests: testthat,
     rmarkdown,
     tidyverse,
     ggmap,
-    sf
+    sf,
+    here
 VignetteBuilder: knitr, tidyverse
 Depends: 
     R (>= 2.10)
