--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,10 +17,19 @@ Remotes: hadley/emo
 Suggests: testthat,
     knitr,
     rmarkdown,
+    tibble,
+    ggplot2,
+    dplyr,
+    tidyr,
+    recipes,
+    janitor,
+    usethis,
+    metajam,
+    markdown,
     tidyverse,
+    here,
     ggmap,
-    sf,
-    here
+    sf
 VignetteBuilder: knitr, tidyverse
 Depends: 
     R (>= 2.10)
